# user/api/auth/v1/auth.pb.validate.go
@@ -57,6 +57,41 @@ func (m *RegisterAuthRequest) validate(all bool) error {
 
 	var errors []error
 
+	if utf8.RuneCountInString(m.GetUsername()) < 1 {
+		err := RegisterAuthRequestValidationError{
+			field:  "Username",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetPassword()) < 1 {
+		err := RegisterAuthRequestValidationError{
+			field:  "Password",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetConfirmPassword()) < 1 {
+		err := RegisterAuthRequestValidationError{
+			field:  "ConfirmPassword",
+			reason: "value length must be at least 1 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	// no validation rules for Web
+
 	if len(errors) > 0 {
 		return RegisterAuthRequestMultiError(errors)
 	}
@@ -158,6 +193,14 @@ func (m *RegisterAuthReply) validate(all bool) error {
 	}
 
 	var errors []error
+
+	// no validation rules for AccessToken
+
+	// no validation rules for TokenType
+
+	// no validation rules for RefreshToken
+
+	// no validation rules for ExpiresIn
 
 	if len(errors) > 0 {
 		return RegisterAuthReplyMultiError(errors)
@@ -985,33 +1028,20 @@ func (m *PasswordlessTokenAuthRequest) validate(all bool) error {
 
 	if m.Email != nil {
 
-		if all {
-			switch v := interface{}(m.GetEmail()).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, PasswordlessTokenAuthRequestValidationError{
-						field:  "Email",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, PasswordlessTokenAuthRequestValidationError{
-						field:  "Email",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(m.GetEmail()).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return PasswordlessTokenAuthRequestValidationError{
+		if wrapper := m.GetEmail(); wrapper != nil {
+
+			if err := m._validateEmail(wrapper.GetValue()); err != nil {
+				err = PasswordlessTokenAuthRequestValidationError{
 					field:  "Email",
-					reason: "embedded message failed validation",
+					reason: "value must be a valid email address",
 					cause:  err,
 				}
+				if !all {
+					return err
+				}
+				errors = append(errors, err)
 			}
+
 		}
 
 	}
@@ -1021,6 +1051,56 @@ func (m *PasswordlessTokenAuthRequest) validate(all bool) error {
 	}
 
 	return nil
+}
+
+func (m *PasswordlessTokenAuthRequest) _validateHostname(host string) error {
+	s := strings.ToLower(strings.TrimSuffix(host, "."))
+
+	if len(host) > 253 {
+		return errors.New("hostname cannot exceed 253 characters")
+	}
+
+	for _, part := range strings.Split(s, ".") {
+		if l := len(part); l == 0 || l > 63 {
+			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
+		}
+
+		if part[0] == '-' {
+			return errors.New("hostname parts cannot begin with hyphens")
+		}
+
+		if part[len(part)-1] == '-' {
+			return errors.New("hostname parts cannot end with hyphens")
+		}
+
+		for _, r := range part {
+			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
+				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
+			}
+		}
+	}
+
+	return nil
+}
+
+func (m *PasswordlessTokenAuthRequest) _validateEmail(addr string) error {
+	a, err := mail.ParseAddress(addr)
+	if err != nil {
+		return err
+	}
+	addr = a.Address
+
+	if len(addr) > 254 {
+		return errors.New("email addresses cannot exceed 254 characters")
+	}
+
+	parts := strings.SplitN(addr, "@", 2)
+
+	if len(parts[0]) > 64 {
+		return errors.New("email address local phrase cannot exceed 64 characters")
+	}
+
+	return m._validateHostname(parts[1])
 }
 
 // PasswordlessTokenAuthRequestMultiError is an error wrapping multiple
@@ -1260,6 +1340,8 @@ func (m *LoginPasswordlessRequest) validate(all bool) error {
 		}
 		errors = append(errors, err)
 	}
+
+	// no validation rules for Web
 
 	if m.Phone != nil {
 
