# user/api/user/v1/user.go
@@ -5,6 +5,7 @@ import "google.golang.org/protobuf/proto"
 func (x *CreateUserRequest) StringWithMask(mask string) string {
 	ret := proto.Clone(x).(*CreateUserRequest)
 	ret.Password = mask
+	ret.ConfirmPassword = mask
 	return ret.String()
 }
 
@@ -12,6 +13,8 @@ func (x *AdminUpdateUserRequest) StringWithMask(mask string) string {
 	ret := proto.Clone(x).(*AdminUpdateUserRequest)
 	if ret.User != nil {
 		ret.User.Password = mask
+		ret.User.ConfirmPassword = mask
 	}
+
 	return ret.String()
 }
